# pong

./: CMakeLists.txt  README.md  flake.nix
src/: KeyHold.cpp  KeyHold.hpp  Paddle.cpp  Paddle.hpp  debug_win.cpp  debug_win.hpp  main.cpp  util.hpp
